fix: 🧪 dark mode

--- a/packages/blog2/src/components/molecules/SubscriptionForm/index.module.css
+++ b/packages/blog2/src/components/molecules/SubscriptionForm/index.module.css
@@ -15,11 +15,7 @@
 }
 
 .errorMessage {
-  color: rgba(153, 27, 27, 1);
-}
-
-.dark .errorMessage {
-  color: rgba(255, 112, 79, 1);
+  color: var(--subscription-form-error-message-color);
 }
 
 .field {
@@ -28,24 +24,17 @@
   padding: 0.75rem 1rem;
   width: 100%;
   height: 3rem;
-  border-width: 2px;
+  border-width: var(--subscription-form-field-border-width);
   border-color: rgba(229, 231, 235, 1);
-}
-.dark .field {
-  border-width: 0px;
 }
 
 .submitButton {
   padding: 0.75rem 1rem;
   height: 3rem;
-  color: rgba(255, 255, 255, 1);
-  background-color: #005b99;
+  color: var(--subscription-form-submit-button-color);
+  background-color: var(--subscription-form-submit-button-background-color);
   flex-grow: 1;
-}
-
-.dark .submitButton {
-  color: rgba(0, 0, 0, 1);
-  background-color: #70b5ff;
+  cursor: pointer;
 }
 
 .idle {
